cluster/homelab/apps/prod-environment/connect-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-api
  namespace: prod-environment
spec:
  selector:
    matchLabels:
      app: connect-api
  template:
    metadata:
      labels:
        app: connect-api
    spec:
      containers:
        - name: connect-api
          image: registry.oplabs.us:5050/root/connect-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
