cluster/homelab/apps/prod-environment/connect-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-api
  namespace: prod-environment
spec:
  selector:
    app: connect-api
  ports:
    - port: 80
      targetPort: 80
